added title and made it cute

--- a/styles.css
+++ b/styles.css
@@ -17,32 +17,47 @@ footer {
 }
 
 .w {
-
+  background-image: url("images/crash.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .a {
-
+  background-image: url("images/kick.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .s {
-
+  background-image: url("images/snare.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .d {
-
+  background-image: url("images/tom1.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .j {
-
+  background-image: url("images/tom2.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .k {
-
+  background-image: url("images/tom3.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .l {
-
+  background-image: url("images/tom4.png");
+  background-size: cover;
+  background-position: center;
 }
+
 
 .set {
   margin: 10% auto;
